2012-04-16 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix variable name in class.tx_srfeuserregister_control_main.php

2012-04-15 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix bug #36165: Localization of some strings results in empty string
	* Fix bug #18108 (old bug tracker): Evaluating for white spaces with preg does not work
	* Fix bug #14453 (old bug tracker): Confirmation mail is sent to user although enableEmailConfirmation = 0
	* Add feature #36191: Move captcha markers setting and captcha evaluation to hooks

2012-04-15 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Add feature #36123: Allow evaluation of email and captcha on the infomail form
	* Cleanup changelog
	* Follow-up 10 to feature #34447: No infomail feature for fe_users
	* Update manual: Remove color and wrap markers absent of css-styled template
	* Add feature #36125: Require to remove obsolete infomail markers
	* Fix bug #36126: email.INFOMAIL_NORECORD = 0 is not honoured
	* Suggest sr_freecap
	* Add feature #36129: Adjust HTML markup of captcha subpart of default HTML template
	* Fix bug #36131: infomail edit link leads to wrong page

2012-04-14 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix bug #36051: RegHash not cleared if link results in auto-login
	* Change order of extension dependencies (rsaauth before saltedpasswords)
	* Update extensions dependencies, require TYPO3 4.4
	* Update manual
	* Add feature #36089: Issue error message if html template contains deprecated marker
	* Fix bug #36091: setEmptyIfAbsent may not work if field is not numeric

2012-04-13 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Follow-up 10 to feature #34447: Upgrade markers only for extension sr_feuser_register
	* Update manual: Remove references to simulateStaticDocuments
	* Add feature #36006: Honour tt_address extension configuration settings
	* Follow-up feature #36006: Fix $GLOBALS['TCA']['tt_address']['feInterface']['fe_admin_fieldList']
	* Cleanup identity checks
