@@ -1,3 +1,6 @@
+2012-04-19 Stanislas Rolland  <typo3(arobas)sjbr.ca>
+	* Follow-up 2 to feature #36006: Test whether extension tt_address is loaded
+
 2012-04-16 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Fix variable name in class.tx_srfeuserregister_control_main.php
 
